<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_characters"
        android:icon="@drawable/ic_characters"
        android:title="@string/characters" />
    
    <item
        android:id="@+id/nav_locations"
        android:icon="@drawable/ic_locations"
        android:title="@string/locations" />
    
    <item
        android:id="@+id/nav_episodes"
        android:icon="@drawable/ic_episodes"
        android:title="@string/episodes" />
    
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu> 